# aibrowseradd

./: .env  Dockerfile  createvideo.py  db.sqlite3  jobteaser_agent_history_ablamawunyosekpona_at_gmail.com.txt  jobteaser_agent_history_u2572872848_at_gmail.com.txt  main.py  manage.py  pyproject.toml  requirements.txt
aibrowser/: asgi.py  settings.py  urls.py  wsgi.py
browserapp/: admin.py  models.py  urls.py  views.py
browserapp/migrations/: 0001_initial.py  0002_jobpreference.py
config/: credentials.json
templates/: index.html  success.html
workflows/: deploy.yml
